--- a/VRChat/69/1338769.html
+++ b/VRChat/69/1338769.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gX9DOgZ8+XcrQt3CjWdJlnoCcgIruj1VVi4zLnFkam0="></script>
+    "4vLWYi4xy2BQNl/1rTqjHu1g/GHx5Qt0lgt9QGtfcZY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　箱中華　「オイスターペイル」","description":"オイスターペイル\n\n箱中華です。Very RelievedなChinese foodです。\nワールドの置物、アバターへの小道具等に使ってください。\n\n同梱内容\n\n・unitypackage\n・FBX\n・Texture\n・readme.txt\n\n\nTextureフォルダに.psdファイルがあります。\n\n\nポリゴン数1852\n\nマテリアル数5\n\narktoon-shaders-1.0.2.4を使用させて貰っています。\n\n\n　利用規約\n\n対象コンテンツの利用権利の販売となります。\nコンテンツを改変および任意メディアで利用することができます。\n\nただし下記を禁止します。\n\n ・他人が利用できるようにし、著作者の販売を阻害すること。\n\n　・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n　\n ・利用権利は他人に譲渡することができません。\n\nその他\n\n ・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n\n\nこのライセンスにおける解説情報は下記になります。\n\n\nhttps://gitlab.com/towelfunnelvrc/towel-license/wikis/\n\n（タオルライセンス 販売用 version0.9）\n\n　　　　\nシェーダーとしてArktoon-Shadersを使用させて貰っています。\n\n　　　　Arktoon-Shaders\n\tsynqark 様【https://booth.pm/ja/items/1027997】\n\n","url":"https://booth.pm/ja/items/1338769","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/59f43df1-17f0-49b3-ad41-47c8b0d2ce1f/i/1338769/e276e6e8-d31b-40a8-aab0-27ede229b5b3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gX9DOgZ8+XcrQt3CjWdJlnoCcgIruj1VVi4zLnFkam0="></script>
+    nonce="4vLWYi4xy2BQNl/1rTqjHu1g/GHx5Qt0lgt9QGtfcZY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1338769/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1338769/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
