--- a/VRChat/85/1338685.html
+++ b/VRChat/85/1338685.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yxWpeFkii9XwrtM5r4vhF+loP2sOZKYFi04Tqoba4tc="></script>
+    "iJyO/n1UOSn5eQMdKuvP/mV1xu1x2TPSbexBe8W/OqU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC想定】ログインエフェクトシェーダー","description":"VRChatでの使用を想定した、オブジェクトが見えなくなくエフェクトをもったシェーダー4種のセットです。\nログイン・ログアウト時の演出などにご使用ください。FlatLitToon改造なので、ある程度のトゥーンシェーダーとして使うことができます。\n\n～規約\n・VRCの仕様変更により本パッケージの機能が使えなくなった場合、製作者は責任を負いません。(可能な限りの対策はします。)\n・本製品を使って発生した問題に対しては製作者は一切の責任を負いません。\n許可事項\n・改変・解析\n禁止事項\n・迷惑行為等\n\n～連絡先\nTwitter : HHOTATEA_VRC\nDiscord : hhotatea #0333\n何かあればいつでも連絡ください。\n\n【Properties】\nDisolve : 空間が屈折→光る→現れる　みたいなイメージ\n Alpha : 透明になり始める部分を指定するテクスチャ\n Color : 透明になり始める部分の発光\n Light : 発光部分の幅\n Phase : 0で完全に透明、1で完全に表れる\nDraw : 透明→白→線画→着色→トゥーン調→表れる　筆でアバターを書いているようなイメージ\n Alpha : 透明になり始める部分を指定するテクスチャ\n Draw : 0で完全に透明、1で完全に表れる\nGeom : 破片が集まってきて集合しオブジェクトが現れる\n Center : 破片の散らばり方の中心\n Collapse : 1で完全に散らばる、0で完全に表れる\n MaxCollapse : Collapseを1にしても、完全に消えきれてないときに数値を上げる\nRandom : 空間がモザイク状に屈折→だんだんとモザイクの解像度が上がり色がつく\n Tilling/Offset : モザイクの解像度等\n Draw : 0で完全に透明、1で完全に表れる\n\n*2019/04/30 配布開始","url":"https://booth.pm/ja/items/1338685","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/4fb745c3-074a-4dd3-a297-3f01ee3312c7/i/1338685/3ff7a214-68d6-4fc1-b422-09a190f8242d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yxWpeFkii9XwrtM5r4vhF+loP2sOZKYFi04Tqoba4tc="></script>
+    nonce="iJyO/n1UOSn5eQMdKuvP/mV1xu1x2TPSbexBe8W/OqU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1338685/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              551
+                              552
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1338685/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              551
+                              552
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
