--- a/VRChat/58/1338058.html
+++ b/VRChat/58/1338058.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0mbfnc/DGi82mcRU15y5Fwb6aJL5TAafjdFf1KNwU4g="></script>
+    "+UgzJ3sH7YuVztnKGWS3u2U8YFSo2OdnQHGhLP2pPr0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Vroid】カジュアルなイチゴTシャツセット","description":"内容\n・フリー…簡易版白Tシャツ1着\n・Tシャツセット…イチゴ柄のTシャツ2着（白、黒）\n・パンツセット…ハーフパンツ2着（黒、赤）\n・ブーツ…ショートブーツ1足（黒に赤いリボン）\n・スペシャルセット…上記すべてに加えレモン柄の白Tシャツ1着、黄色のショートパンツ1着つき\n\n見本はこちら\nhttps://hub.vroid.com/characters/3090908678367339307/models/178635937322867930\n\n購入前に利用規約をお読みください\n\nhttps://arinpv0v0.wixsite.com/makevroid/about","url":"https://booth.pm/ja/items/1338058","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"1100"},"image":"https://booth.pximg.net/c/620x620/a52bc9c8-f676-4539-98be-e65fe87af193/i/1338058/66ad5500-4bfb-4120-9130-1c0a816da4ca_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0mbfnc/DGi82mcRU15y5Fwb6aJL5TAafjdFf1KNwU4g="></script>
+    nonce="+UgzJ3sH7YuVztnKGWS3u2U8YFSo2OdnQHGhLP2pPr0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1338058/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               184
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1338058/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               184
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
