--- a/VRChat/24/1336924.html
+++ b/VRChat/24/1336924.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "U56f9cKUM8sVlMK6gJtpfAH4u3+K8OncIKe7VrFEA54="></script>
+    "lHM0WS2gDS9L0W/TpBbP53TaVwnWEic5JuUJIWcjKcM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル 小鈴Ver1.2","description":"\n軽率にスキ押せ～！！！！\n\n製作者：NIBOSI \n\nVRChat対応3Dモデルです。\nOqurusQuest対応！\nフルトラ対応！！\n\n※更新20.03.26　Ver.1.2\n　・顔,袖のメッシュ修正\n　・指のｱﾆﾒｰｼｮﾝ修正\n\n※更新19.07.22　Ver1.1\n  ・Unity package内のｱﾆﾒｰｼｮﾝが含まれていなかったので追加しました。\n　・オブジェクトを統合しました。\n　・シェーダをVRchat/Mobile/Toon Litに変更しました。\n\n \n\n仕様\n ・ポリゴン数：3994ポリゴン\n ・テクスチャ1枚\n ・マテリアル1個\n ・リップシンク15種類\n ・表情アニメーション6種類\n ・自動まばたき\n\n セット内容\n ・Unity package\n ・モデルfbxデータ\n ・Textureファイル\n 　　ﾃｸｽﾁｬ　1枚 　　\n　　 UV展開配置図　1枚\n ・利用規約\n\n\n\n\n 利用規約\n 1.本モデルの著作権は製作者に帰属します。\n 2.改変前また改変後の本モデルの再配布を禁止します。\n 3.本モデルを使用した一切の損害について製作者は責任を負いません。\n 4.モデルの政治利用・差別的・侮辱的利用を禁止します。\n ※購入した時点で本利用規約に同意したものとします。\n ※利用規約が変更した場合は、最新物が適用されます。\n\n 連絡先 \ntwitter：@hutabosi777 ","url":"https://booth.pm/ja/items/1336924","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/f03af7d7-31bf-49c1-b051-6718e95e41e0/i/1336924/0ec052a4-9bcd-440e-b278-8b5d31f95755_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="U56f9cKUM8sVlMK6gJtpfAH4u3+K8OncIKe7VrFEA54="></script>
+    nonce="lHM0WS2gDS9L0W/TpBbP53TaVwnWEic5JuUJIWcjKcM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1336924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1336924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
