--- a/VRChat/18/1330218.html
+++ b/VRChat/18/1330218.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vSIZVnrf8RAwk0ooCm1Jo+zgFIxwaRFL/64sL1iqjko="></script>
+    "k3xc18U+1KVhZYFX8h3ceMxjrcsVTW1OsHvlUY/MxFo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat向けギミック】滞在時間がわかる腕時計【アバター用小物】","description":"https://twitter.com/chemical_15_VR/status/1121034579983228929\n動いているgif画像の添付されたツイートへのリンクです。\n\n※現在時刻ではありません\n\n懐中時計版はこちら\nhttps://chemical15.booth.pm/items/1534636\n\n■滞在時間で針が動く腕時計です\n秒針が一秒・長針が一分・短針が一時間を指しています。\n\nシェイプキーで腕に合わせてベルトの調整ができます\n\nVRchatでイベント終了までの時間を確認したり、自分がどれくらい今のワールドいるかを見たりするのに使えます。\n\n■使い方\n色の名前の付いたprefab（環境によっては青い四角アイコン）をヒエラルキーにドラック＆ドロップし、手首のボーンの子オブジェクトにして使ってください。\n※FBXを置いただけでは針が動きません\n\n■改変\n改変する場合は同梱の改変用画像.psdをお使いください。\n※gimpで作ったpdsですのでご注意ください\n\n色の配置などは、同梱の改変参考.pngを参考にしてください。\n\n■注意事項\n・アバターを変えると時計の針がリセットされてしまいます\n・自分と他のプレイヤーとは同期しません\n\n※あくまで自分で時間を確認する時にお使いください\n\n■免責事項\nこのデータの使用によって発生したいかなる損害・損失・トラブルについて、作者は一切の責任を負いません\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布（改造・未改造問わず）\n※アバターペデスタルへの使用も再配布にあたります\nその他製作者が不適切と判断したもの\n※上記の規約は予告なく変更する場合があります\n■やっていい事\n改変\n\n※上記以外の使用については作者にお問い合わせください。\n\n連絡先：https://twitter.com/chemical_15_VR","url":"https://booth.pm/ja/items/1330218","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1330218/b9986117-ba04-4368-a465-15e4a4748775_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vSIZVnrf8RAwk0ooCm1Jo+zgFIxwaRFL/64sL1iqjko="></script>
+    nonce="k3xc18U+1KVhZYFX8h3ceMxjrcsVTW1OsHvlUY/MxFo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1330218/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               205
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1330218/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               205
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
