--- a/VRChat/39/1330139.html
+++ b/VRChat/39/1330139.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DbVgsrKLako8N2wrJ/IGNE3HNC4b/bANEm1cO6ZeiEw="></script>
+    "6R1nx6W5x10NvpQU0He1Bc962FLZ7wLV0j1d1ndCl6A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Sci-fi Mask v1","description":"Sci-fi Style Mask\n\n[Polygon]\n\n- High Poly ver -\nFaces - 9994\nTris - 19756\n\n- Low Poly ver -\nFaces - 5759\nTris - 11291\n\n\n[Texture]\n\nBasement\nMetallic\nNormal\n\n2048x2048\n\n[File]\n\nSci-fi_Mask.Unitypackage\n(6,178KB)\n\n[Email]\n\nphecrys@gmail.com \n\n\n--------------------------\n\nThx for watching my model","url":"https://booth.pm/ja/items/1330139","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/4a1c1edc-9b81-4a0c-9a1f-0a5af94b8e1a/i/1330139/f8c2a388-0ec9-4ded-940f-2e010905aacc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DbVgsrKLako8N2wrJ/IGNE3HNC4b/bANEm1cO6ZeiEw="></script>
+    nonce="6R1nx6W5x10NvpQU0He1Bc962FLZ7wLV0j1d1ndCl6A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1330139/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               254
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1330139/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               254
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
