--- a/VRChat/23/1329623.html
+++ b/VRChat/23/1329623.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "TFcYym+YZpkfuRKWJMKPy1VOEbjRS+nyNBexkowoiPI="></script>
+    "x3swhqEnruYgs/1tQRt8TC4QC/RLVDEtIk7KPg0GxCw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VKラインストーン","description":"キラキラ輝くのが特徴の宝石（ラインストーン）の3Dモデルパッケージ（unitypackage）です。\n主にVRChatでの利用を想定しています。アバターやワールドの装飾に使って頂ければと思います。\n\n実物を展示しているVRChatワールド「VK Rhinestone demo」を作りましたので、見た目の確認をしたい場合は行ってみてください。\nhttps://www.vrchat.net/home/launch?worldId=wrld_221738a6-59f2-4de5-80f2-668f55731050\n","url":"https://booth.pm/ja/items/1329623","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1000","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/aadf057d-75a6-4934-a7d2-701141567595/i/1329623/97bbe8d7-5434-416b-b18f-4a2e7f137101_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TFcYym+YZpkfuRKWJMKPy1VOEbjRS+nyNBexkowoiPI="></script>
+    nonce="x3swhqEnruYgs/1tQRt8TC4QC/RLVDEtIk7KPg0GxCw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1329623/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               340
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1329623/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               340
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
